--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,15 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "dist/main.ts"
+        "dest": "dist/main.ts",
+        "methods": [
+            "GET",
+            "POST",
+            "PUT",
+            "DELETE",
+            "PATCH",
+            "OPTIONS"
+          ]
       }
     ]
   }
