--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,3 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "dist/main.ts",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "dist/main.ts",
-        "methods": [
-            "GET",
-            "POST",
-            "PUT",
-            "DELETE",
-            "PATCH",
-            "OPTIONS"
-          ]
-      }
-    ]
-  }
+  "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
+}
