--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,13 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
+  "version": 2,
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "nest-app/main.ts"
+    }
+  ],
+  "env": {
+    "NPM_CONFIG_PRODUCTION": "false",
+    "NODE_ENV": "development"
+  }
 }
