--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
   "version": 2,
-  "functions": { "api/**/*.js": { "runtime": "nodejs12.x" } },
   "routes": [
-    { "src": "/(.*)", "dest": "dist/main.js" }
+    { 
+      "src": "/(.*)", 
+      "dest": "dist/main.js" 
+    }
   ]
 }
