--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,6 @@
       "src": "/(.*)", 
       "dest": "dist/main.js" 
     }
-  ]
+  ],
+  "allowMethods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
 }
