--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,8 @@
   "routes": [
     { 
       "src": "/(.*)", 
-      "dest": "dist/main.js" 
+      "dest": "dist/main.js" ,
+      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
     }
-  ],
-  "allowMethods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+  ]
 }
