--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,23 @@
 {
-  "version": 2,
-  "routes": [
-    { 
-      "src": "/(.*)", 
-      "dest": "dist/main.js" ,
-      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
-    }
-  ]
-}
+    "version": 2,
+    "builds": [
+      {
+        "src": "dist/main.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "dist/main.js",
+        "methods": [
+            "GET",
+            "POST",
+            "PUT",
+            "DELETE",
+            "PATCH",
+            "OPTIONS"
+          ]
+      }
+    ]
+  }
