--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "rxjs": "^7.8.1",
     "sendmail": "^1.6.1",
     "socket.io": "^4.7.4",
+    "stripe": "^15.1.0",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
