--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv-expand": "^10.0.0",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "nodemailer": "^6.9.7",
     "pg": "^8.11.3",
     "pg-connection-string": "^2.6.2",
